<resources>
    <string name="app_name">TOLLWAY</string>
    <string name="app_version">V1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_trace_number">Trace Number : %1$s</string>
    <string name="dialog_void_amount">จำนวนเงิน : %1$s บาท</string>
    <string name="slip_tid">TID : 619000007</string>
    <string name="slip_mid">MID : 0000001030100007</string>
    <string name="slip_host">HOST XXXX AAA</string>
    <string name="slip_date">MAY 07, 2018</string>
    <string name="slip_time">12:06</string>
    <string name="slip_name_card">AAA Card</string>
    <string name="slip_type">SALE</string>
    <string name="slip_number_card">525667XXXXXXXXX2651</string>
    <string name="slip_endcard_date">XX/XX</string>
    <string name="slip_full_name">FULL OF FIRSTANME LASTNAME/</string>
    <string name="slip_trace">TRACE # 00000011</string>
    <string name="slip_stan">STAN # 000XXX</string>
    <string name="slip_batch">BATCH # 000XXX</string>
    <string name="slip_ref_no">REF NO: 2430287966224</string>
    <string name="slip_approval_code">APPROVAL CODE: 249942</string>
    <string name="slip_aid">AID: A000000000651010</string>
    <string name="slip_tc">TC: 65E645035F5805D1</string>
    <string name="slip_tvr">TVR: 080800E000</string>
    <string name="slip_tsi">TSI: F800</string>
    <string name="slip_sale">SALE</string>
    <string name="slip_amount_thb">THB * 1223333123.00</string>
    <string name="slip_signature">SIGNATURE :</string>
    <string name="slip_merchant_copy">*MERCHANT COPY*</string>
    <string name="slip_original_copy_signed_b_customer">ORIGINAL COPY SIGNED B CUSTOMER</string>
    <string name="slip_signature_required">SIGNATURE REQUIRED</string>
    <string name="slip_no_refund">** NO REFUND **</string>
    <string name="slip_print">พิมพ์ ใบเสร็จรับเงิน</string>
    <string name="slip_pattern_amount">* %1$s</string>
    <string name="slip_pattern_amount_normal"> %1$s</string>
    <string name="slip_pattern_amount_void">- %1$s</string>
    <string name="slip_SETTLE_pattern_amount_void"> %1$s</string>

    <string name="date_qr">%1$s</string>
    <string name="time_qr">%1$s</string>
    <string name="tid_qr">%1$s</string>
    <string name="biller_id_qr">%1$s</string>
    <string name="trace_no_qr">%1$s</string>
    <string name="ref1_qr">%1$s</string>
    <string name="ref2_qr">%1$s</string>
    <string name="ref3_qr">%1$s</string>
    <string name="slip_text">โปรดตรวจสอบความถูกต้องในทันทีที่ได้รับเอกสารนี้\nหากไม่ทักท้วงจะถือว่ารายการดังกล่าวข้างต้น\nถูกต้องสมบูรณ์</string>
    <string name="version_app">V.1.5</string>
    <string name="todo">test</string>
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <string name="remove_card">Please Remove Card&#8230;</string>
    <string name="see_phone">Please See Phone&#8230;</string>
    <string name="detect_card_again">Failed to read card, please try again</string>
    <string name="entry_card_password">Please input the bank card password</string>
    <string name="without_password">Without a password, press the Enter key</string>
</resources>
