<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SlipTemplateActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/slipNestedScrollView"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_above="@+id/printBtn"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:padding="4dp">

            <LinearLayout
                android:id="@+id/slipLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/dateLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:fontFamily="@font/robotomono"
                        android:gravity="left"
                        android:text="@string/date_qr"
                        android:textColor="@android:color/black"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                    <TextView

                        android:id="@+id/timeLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:fontFamily="@font/robotomono"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:text="@string/time_qr"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tidLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:fontFamily="@font/robotomono"
                        android:textStyle="bold"
                        android:gravity="left"
                        android:text="@string/tid_qr"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/traceNoLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:fontFamily="@font/robotomono"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:text="@string/trace_no_qr"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="BILLER ID : "
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/robotomono"
                        android:textStyle="bold"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/billerIdLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/robotomono"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:text="@string/biller_id_qr"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ref1RelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/robotomono"
                        android:textStyle="bold"
                        android:gravity="left"
                        android:text="REF1 : "
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/ref1Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/robotomono"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:text="@string/ref1_qr"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/ref2RelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/robotomono"
                        android:textStyle="bold"
                        android:gravity="left"
                        android:text="REF2 : "
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/ref2Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/robotomono"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:text="@string/ref3_qr"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/ref3RelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/robotomono"
                        android:textStyle="bold"
                        android:gravity="left"
                        android:text="REF3 : "
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/ref3Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/robotomono"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:text="@string/ref2_qr"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:minHeight="65dp"
                    android:minWidth="190dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/qr_logo1" />

                <ImageView
                    android:id="@+id/qrImage"
                    android:layout_width="230dp"
                    android:layout_height="230dp"
                    android:layout_gravity="center"
                    android:layout_margin="4dp" />


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:lines="1"
                        android:textAllCaps="true"
                        android:id="@+id/merchantNameThaiLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/robotomono"
                        android:textStyle="bold"
                        android:text="CRIMINAL COURT : "
                        android:textColor="@android:color/black"
                        android:textSize="15.5sp"/>
                </FrameLayout>

                <FrameLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAllCaps="true"
                        android:id="@+id/merchantNameLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/robotomono"
                        android:textStyle="bold"
                        android:text="CRIMINAL COURT : "
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/robotomono"
                        android:gravity="left"
                        android:text="AMT :"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/amtThbLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/robotomono"
                        android:gravity="right"
                        android:lines="1"
                        android:text=" * 1,500,000,000.00"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/consolab"
                    android:gravity="right"
                    android:text=" BAHT"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp">
                    <!--
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/microsoft_sans_serif"
                        android:text="AMOUNT : "
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/amtThbLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:fontFamily="@font/microsoft_sans_serif"
                        android:gravity="center"
                        android:text="*234234"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                        -->

                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/black" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_weight="0.5"
                            android:src="@drawable/ktb_logo10_print" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1.5"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="รับชำระได้ทุกธนาคาร"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Thai QR acceptance"
                                android:textColor="@android:color/black" />

                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="@font/microsoft_sans_serif"
                    android:text=""
                    android:textColor="@android:color/black" />


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>


    </RelativeLayout>


</RelativeLayout>